--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     </div>
 
                     <div class="trick__content">
-                        <img src="assets/img/trick-treat3-img.png" alt="" class="trick__img">
+                        <img src="/assets/img/trick-treat3-img.PNG" alt="" class="trick__img">
                         <h3 class="trick__title">Generator N°</h3><br>
                         <span class="trick__price">Clique no link abaixo</span>
                         <a href="https://generator-number-puce.vercel.app/" class="trick__subtitle">Acessar projeto</a>
